--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-flow-renderer": "^10.3.16",
     "react-icons": "^4.4.0",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.2"
