--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/papaparse": "^5.3.5",
+    "axios": "^0.27.2",
     "next": "12.2.5",
+    "papaparse": "^5.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-flow-renderer": "^10.3.16",
