--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-flow-renderer": "^10.3.16",
     "react-icons": "^4.4.0",
+    "reactflow": "^11.1.1",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.2"
   },
